--- a/package.json
+++ b/package.json
@@ -5,20 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next build && NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
+    "compression": "^1.7.4",
+    "express": "^4.21.1",
+    "idb": "^8.0.0",
+    "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
+    "date-fns": "^2.24.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "eslint-config-next": "15.0.1",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "styled-components": "^5.3.11",
+    "typescript": "^5"
   }
 }
